--- a/assets/app.css
+++ b/assets/app.css
@@ -144,11 +144,11 @@ section {
 }
 
 .title {
-	color: #0f172a;
+	color: #fff;
 	display: inline-block;
 	position: relative;
 	margin-top: 35px;
-	background-color: #c5e1ee;
+	background-color: #0ea5e9;
 	padding: 0px 25px;
 }
 
@@ -256,43 +256,108 @@ aside {
 }
 
 .quote {
-	color: #475569;
+	color: #6b7583;
 	font-size: 18px;
 	padding: 10px 15px;
+	font-style: italic;
 }
 
-@media screen and (max-width: 600px) {
-	.navbar {
-		overflow: hidden;
-		background-color: #020617;
-		padding: 20px;
-		text-align: center;
-		display: flex;
-		flex-direction: column;
-		position: sticky;
-		top: 0;
-		z-index: 1000;
+footer {
+	background-color: #0ea5e9;
+	color: #fff;
+	text-align: center;
+	padding: 32px 0px;
+}
+
+@media only screen and (max-width: 768px) {
+	body {
+		font-size: 14px;
+	}
+
+	ul {
+		padding: 0;
+	}
+
+	header {
+		min-height: 50vh;
+	}
+
+	.description h1 {
+		font-size: 36px;
+	}
+
+	.description p {
+		font-size: 18px;
 	}
 
 	.navbar a {
-		color: #f2f2f2;
+		font-size: 14px;
+		padding: 10px;
+	}
+
+	.content {
+		width: 100%;
+	}
+
+	.card-article {
+		flex-direction: column;
+		align-items: center;
+		text-align: left;
+		padding: 0;
+	}
+
+	.thumbnail-article {
+		margin-bottom: 15px;
+		max-width: 265px;
+	}
+
+	.thumbnail-article img {
+		width: 100%;
+		height: auto;
+		border-radius: 12px;
+		margin: 0;
+		padding: 0;
+	}
+
+	.content-article {
+		width: 100%;
+		padding: 15px;
 		text-align: center;
-		padding: 10px 12px;
-		text-decoration: none;
-		font-size: 10px;
-		margin: 4px;
-		display: inline-block;
 	}
 
-	.navbar a:hover {
-		background-color: #ddd;
-		color: #020617;
-		border-radius: 16px;
+	.content-article h2 {
+		margin: 0;
+		top: 0;
+		color: #334155;
+		text-align: left;
 	}
 
-	.navbar a.active {
-		background-color: #0ea5e9;
-		color: #f2f2f2;
-		border-radius: 16px;
+	.content-article p {
+		margin-top: 10px;
+		color: #475569;
+		text-align: left;
+	}
+	aside {
+		width: 100%;
+	}
+
+	.photo-profile {
+		width: 70%;
+	}
+
+	.name {
+		font-size: 20px;
+	}
+
+	.badge {
+		width: 100%;
+	}
+
+	.social li {
+		font-size: 20px;
+	}
+
+	.quote {
+		font-size: 16px;
 	}
 }
