refactor: replace layout setting with flexbox not float

--- a/assets/app.css
+++ b/assets/app.css
@@ -33,6 +33,8 @@ header {
 main {
 	padding: 30px;
 	overflow: auto;
+	display: flex;
+	justify-content: space-between;
 }
 
 a {
@@ -124,9 +126,6 @@ a {
 }
 
 .content {
-	display: inline;
-	justify-content: space-between;
-	float: left;
 	width: 70%;
 	padding: 25px 5px;
 }
@@ -159,8 +158,11 @@ section {
 }
 
 .thumbnail-article {
-	flex: 0 0 30%;
 	overflow: hidden;
+	max-width: 250px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .thumbnail-article img {
@@ -195,7 +197,6 @@ section {
 }
 
 aside {
-	float: right;
 	padding: 25px 5px;
 	width: 30%;
 	color: #0f172a;
@@ -276,6 +277,12 @@ footer {
 
 	ul {
 		padding: 0;
+	}
+
+	main {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
 	}
 
 	header {
